Deleted "disable" buttons and added detail swagger
